Fix #355: Add precondition check before finishing onboarding