@@ -30,10 +30,8 @@ import com.wultra.app.onboardingserver.common.database.DocumentDataRepository;
 import com.wultra.app.onboardingserver.common.database.DocumentVerificationRepository;
 import com.wultra.app.onboardingserver.common.database.IdentityVerificationRepository;
 import com.wultra.app.onboardingserver.common.database.OnboardingProcessRepository;
-import com.wultra.app.onboardingserver.common.database.entity.DocumentResultEntity;
-import com.wultra.app.onboardingserver.common.database.entity.DocumentVerificationEntity;
-import com.wultra.app.onboardingserver.common.database.entity.IdentityVerificationEntity;
-import com.wultra.app.onboardingserver.common.database.entity.OnboardingProcessEntity;
+import com.wultra.app.onboardingserver.common.database.OnboardingOtpRepository;
+import com.wultra.app.onboardingserver.common.database.entity.*;
 import com.wultra.app.onboardingserver.common.enumeration.OnboardingProcessError;
 import com.wultra.app.onboardingserver.common.errorhandling.*;
 import com.wultra.app.onboardingserver.common.service.AuditService;
@@ -48,9 +46,9 @@ import com.wultra.app.onboardingserver.impl.service.document.DocumentProcessingS
 import com.wultra.app.onboardingserver.impl.service.verification.VerificationProcessingService;
 import com.wultra.app.onboardingserver.provider.DocumentVerificationProvider;
 import com.wultra.app.onboardingserver.statemachine.guard.document.RequiredDocumentTypesGuard;
+import com.wultra.security.powerauth.client.v3.ActivationStatus;
+import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.util.Streamable;
 import org.springframework.stereotype.Service;
@@ -61,7 +59,7 @@ import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static com.wultra.app.enrollmentserver.model.enumeration.IdentityVerificationPhase.DOCUMENT_UPLOAD;
+import static com.wultra.app.enrollmentserver.model.enumeration.IdentityVerificationPhase.*;
 import static com.wultra.app.enrollmentserver.model.enumeration.IdentityVerificationStatus.*;
 
 /**
@@ -71,14 +69,15 @@ import static com.wultra.app.enrollmentserver.model.enumeration.IdentityVerifica
  * @author Lukas Lukovsky, lukas.lukovsky@wultra.com
  */
 @Service
+@Slf4j
 public class IdentityVerificationService {
-
-    private static final Logger logger = LoggerFactory.getLogger(IdentityVerificationService.class);
 
     private final IdentityVerificationConfig identityVerificationConfig;
     private final DocumentDataRepository documentDataRepository;
     private final DocumentVerificationRepository documentVerificationRepository;
     private final IdentityVerificationRepository identityVerificationRepository;
+    private final OnboardingOtpRepository onboardingOtpRepository;
+    private final ActivationService activationService;
     private final DocumentProcessingService documentProcessingService;
     private final VerificationProcessingService verificationProcessingService;
     private final DocumentVerificationProvider documentVerificationProvider;
@@ -90,7 +89,7 @@ public class IdentityVerificationService {
 
     private final AuditService auditService;
 
-    private static final List<DocumentStatus> DOCUMENT_STATUSES_PROCESSED = Arrays.asList(DocumentStatus.ACCEPTED, DocumentStatus.FAILED, DocumentStatus.REJECTED);
+    static final List<DocumentStatus> DOCUMENT_STATUSES_PROCESSED = List.of(DocumentStatus.ACCEPTED, DocumentStatus.FAILED, DocumentStatus.REJECTED);
 
     /**
      * Service constructor.
@@ -98,6 +97,8 @@ public class IdentityVerificationService {
      * @param documentDataRepository Document data repository.
      * @param documentVerificationRepository Document verification repository.
      * @param identityVerificationRepository Identity verification repository.
+     * @param onboardingOtpRepository Onboarding otp repository.
+     * @param activationService Activation service.
      * @param documentProcessingService Document processing service.
      * @param verificationProcessingService Verification processing service.
      * @param documentVerificationProvider Document verification provider.
@@ -112,6 +113,8 @@ public class IdentityVerificationService {
             final DocumentDataRepository documentDataRepository,
             final DocumentVerificationRepository documentVerificationRepository,
             final IdentityVerificationRepository identityVerificationRepository,
+            final OnboardingOtpRepository onboardingOtpRepository,
+            final ActivationService activationService,
             final DocumentProcessingService documentProcessingService,
             final VerificationProcessingService verificationProcessingService,
             final DocumentVerificationProvider documentVerificationProvider,
@@ -125,6 +128,8 @@ public class IdentityVerificationService {
         this.documentDataRepository = documentDataRepository;
         this.documentVerificationRepository = documentVerificationRepository;
         this.identityVerificationRepository = identityVerificationRepository;
+        this.onboardingOtpRepository = onboardingOtpRepository;
+        this.activationService = activationService;
         this.documentProcessingService = documentProcessingService;
         this.verificationProcessingService = verificationProcessingService;
         this.documentVerificationProvider = documentVerificationProvider;
@@ -328,7 +333,7 @@ public class IdentityVerificationService {
         }
 
         if (allDocVerifications.stream()
-                .anyMatch(docVerification -> DocumentStatus.VERIFICATION_IN_PROGRESS.equals(docVerification.getStatus()))) {
+                .anyMatch(docVerification -> docVerification.getStatus() == DocumentStatus.VERIFICATION_IN_PROGRESS)) {
             logger.debug("Some documents still VERIFICATION_IN_PROGRESS for identity verification ID: {}", idVerification.getId());
             return;
         }
@@ -338,9 +343,7 @@ public class IdentityVerificationService {
             return;
         }
 
-        resolveIdentityVerificationResult(IdentityVerificationPhase.DOCUMENT_VERIFICATION, idVerification, allDocVerifications, ownerId);
-        idVerification.setTimestampLastUpdated(ownerId.getTimestamp());
-        identityVerificationRepository.save(idVerification);
+        moveToDocumentVerificationAndStatusByDocuments(idVerification, allDocVerifications, ownerId);
 
         // Update process error score in case of a failed verification and check process error limits
         if (idVerification.getStatus() == FAILED || idVerification.getStatus() == REJECTED) {
@@ -359,36 +362,133 @@ public class IdentityVerificationService {
      * Process identity verification result for document verifications which have already been previously processed.
      * @param ownerId Owner identification.
      * @param idVerification Identity verification entity.
+     * @throws RemoteCommunicationException Thrown when communication with PowerAuth server fails.
      */
     @Transactional
-    public void processDocumentVerificationResult(final OwnerId ownerId, final IdentityVerificationEntity idVerification) {
-        List<DocumentVerificationEntity> processedDocVerifications =
-                documentVerificationRepository.findAllDocumentVerifications(idVerification, DOCUMENT_STATUSES_PROCESSED);
-        resolveIdentityVerificationResult(IdentityVerificationPhase.COMPLETED, idVerification, processedDocVerifications, ownerId);
+    public void processDocumentVerificationResult(final OwnerId ownerId, final IdentityVerificationEntity idVerification) throws RemoteCommunicationException {
+        if(isValidBeforeFinish(idVerification)) {
+            logger.debug("Final validation passed, {}", ownerId);
+            moveToPhaseAndStatus(idVerification, IdentityVerificationPhase.COMPLETED, ACCEPTED, ownerId);
+        } else {
+            logger.warn("Final validation did not passed, marking identity verification as failed due to '{}', {}", idVerification.getErrorDetail(), ownerId);
+            idVerification.setTimestampFailed(ownerId.getTimestamp());
+            idVerification.setErrorOrigin(ErrorOrigin.FINAL_VALIDATION);
+            moveToPhaseAndStatus(idVerification, IdentityVerificationPhase.COMPLETED, FAILED, ownerId);
+        }
         idVerification.setTimestampFinished(ownerId.getTimestamp());
         idVerification.setTimestampLastUpdated(ownerId.getTimestamp());
         identityVerificationRepository.save(idVerification);
     }
 
     /**
-     * Resolve identity verification result for an identity verification entity using specified document verification results.
-     * @param phase Identity verification phase.
-     * @param idVerification Identity verification entity.
-     * @param docVerifications Document verification results.
+     * Validate all critical conditions were met before finishing the onboarding.
+     * <p>
+     * This should never happen for the state machine.
+     * It works as a safety stop.
+     *
+     * @return validation result
      */
-    private void resolveIdentityVerificationResult(
-            final IdentityVerificationPhase phase,
+    private boolean isValidBeforeFinish(final IdentityVerificationEntity idVerification) throws RemoteCommunicationException {
+        List<DocumentVerificationEntity> documentVerifications =
+                documentVerificationRepository.findAllDocumentVerifications(idVerification, DOCUMENT_STATUSES_PROCESSED);
+
+        if (!documentVerifications.stream()
+                .map(DocumentVerificationEntity::getStatus)
+                .allMatch(it -> it == DocumentStatus.ACCEPTED)) {
+            logger.debug("Some documents are not accepted for identity verification ID: {}", idVerification.getProcessId());
+            idVerification.setErrorDetail("Some documents not accepted");
+            return false;
+        }
+
+        if (!requiredDocumentTypesGuard.evaluate(documentVerifications, idVerification.getId())) {
+            logger.debug("Not all required documents are present for verification ID: {}", idVerification.getProcessId());
+            idVerification.setErrorDetail("Required documents not present");
+            return false;
+        }
+
+        if (!isPrefinalPhaseAndStateValid(idVerification)) {
+            logger.debug("Not valid phase and state for verification ID: {}", idVerification.getProcessId());
+            idVerification.setErrorDetail("Not valid phase and state");
+            return false;
+        }
+
+        if (!isOtpValid(idVerification)) {
+            logger.debug("Not valid OTP for verification ID: {}", idVerification.getProcessId());
+            idVerification.setErrorDetail("Not valid OTP");
+            return false;
+        }
+
+        if (!isPresenceCheckValid(idVerification)) {
+            logger.debug("Presence check did not pass for verification ID: {}", idVerification.getProcessId());
+            idVerification.setErrorDetail("Presence check did not pass");
+            return false;
+        }
+
+        if (!isActivationValid(idVerification)) {
+            logger.debug("Activation is not valid for verification ID: {}", idVerification.getProcessId());
+            idVerification.setErrorDetail("Activation is not valid");
+            return false;
+        }
+
+        return true;
+    }
+
+    private boolean isActivationValid(IdentityVerificationEntity idVerification) throws RemoteCommunicationException {
+        final ActivationStatus activationStatus = activationService.fetchActivationStatus(idVerification.getActivationId());
+        return activationStatus == ActivationStatus.ACTIVE;
+    }
+
+    private boolean isOtpValid(final IdentityVerificationEntity idVerification) {
+        if (!identityVerificationConfig.isVerificationOtpEnabled()) {
+            logger.trace("OTP verification is disabled");
+            return true;
+        }
+        return onboardingOtpRepository.findLastOtp(idVerification.getProcessId(), OtpType.USER_VERIFICATION)
+                .map(OnboardingOtpEntity::getStatus)
+                .filter(it -> it == OtpStatus.VERIFIED)
+                .isPresent();
+    }
+
+    private boolean isPresenceCheckValid(final IdentityVerificationEntity identityVerification) {
+        if (!identityVerificationConfig.isPresenceCheckEnabled()) {
+            logger.trace("Presence check is disabled");
+            return true;
+        }
+        final RejectOrigin rejectOrigin = identityVerification.getRejectOrigin();
+        final ErrorOrigin errorOrigin = identityVerification.getErrorOrigin();
+
+        return errorOrigin != ErrorOrigin.PRESENCE_CHECK && rejectOrigin != RejectOrigin.PRESENCE_CHECK;
+    }
+
+    private boolean isPrefinalPhaseAndStateValid(final IdentityVerificationEntity idVerification) {
+        final IdentityVerificationPhase phase = idVerification.getPhase();
+        final IdentityVerificationStatus status = idVerification.getStatus();
+        return (phase == OTP_VERIFICATION && status == ACCEPTED) ||
+                (phase == PRESENCE_CHECK && status == ACCEPTED && !identityVerificationConfig.isVerificationOtpEnabled()) ||
+                (phase == CLIENT_EVALUATION && status == ACCEPTED && !identityVerificationConfig.isVerificationOtpEnabled() &&!identityVerificationConfig.isPresenceCheckEnabled());
+    }
+
+    /**
+     * Move identity verification to {@code DOCUMENT_VERIFICATION} phase and status based on the given document verifications.
+     *
+     * @param idVerification Identity verification entity.
+     * @param docVerifications Document verifications to determine identity verification status.
+     */
+    private void moveToDocumentVerificationAndStatusByDocuments(
             final IdentityVerificationEntity idVerification,
             final List<DocumentVerificationEntity> docVerifications,
             final OwnerId ownerId) {
+
+        final IdentityVerificationPhase phase = IdentityVerificationPhase.DOCUMENT_VERIFICATION;
         final Date now = ownerId.getTimestamp();
         if (docVerifications.stream()
-                .allMatch(docVerification -> DocumentStatus.ACCEPTED.equals(docVerification.getStatus()))) {
+                .map(DocumentVerificationEntity::getStatus)
+                .allMatch(it -> it == DocumentStatus.ACCEPTED)) {
             // The timestampFinished parameter is not set yet, there may be other steps ahead
             moveToPhaseAndStatus(idVerification, phase, ACCEPTED, ownerId);
         } else {
             docVerifications.stream()
-                    .filter(docVerification -> DocumentStatus.FAILED.equals(docVerification.getStatus()))
+                    .filter(docVerification -> docVerification.getStatus() == DocumentStatus.FAILED)
                     .findAny()
                     .ifPresent(failed -> {
                         idVerification.setErrorDetail(failed.getErrorDetail());
@@ -398,7 +498,7 @@ public class IdentityVerificationService {
                     });
 
             docVerifications.stream()
-                    .filter(docVerification -> DocumentStatus.REJECTED.equals(docVerification.getStatus()))
+                    .filter(docVerification -> docVerification.getStatus() == DocumentStatus.REJECTED)
                     .findAny()
                     .ifPresent(failed -> {
                         idVerification.setErrorDetail(failed.getRejectReason());
